--- a/cv/index.html
+++ b/cv/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-    <title>王宇杰-应聘前端开发-2020</title>
+    <title>王宇杰-应聘前端开发-2021</title>
     <link rel="stylesheet" href="./CSS/reset.css">
-    <link rel="stylesheet" href="./CSS/sytle.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                         <ul>
                             <li><span>姓名</span><span>王宇杰</span></li>
                             <li><span>性别</span><span>男</span></li>
-                            <li><span>年龄</span><span>23</span></li>
+                            <li><span>年龄</span><span>24</span></li>
                             <li><span>学历</span><span>专科</span></li>
                             <li><span>英语水平</span><span>CET-4</span></li>
                         </ul>
@@ -39,12 +39,14 @@
                                 <svg class="icon" aria-hidden="true">
                                     <use xlink:href="#icon-telephone"></use>
                                 </svg>
-                                <a href="tel:15967537583">15336522825</a></li>
+                                <a href="tel:15967537583">15336522825</a>
+                            </li>
                             <li>
                                 <svg class="icon" aria-hidden="true">
                                     <use xlink:href="#icon-wechat"></use>
                                 </svg>
-                                <span>Eternatus</span></li>
+                                <span>Eternatus</span>
+                            </li>
                             <li>
                                 <svg class="icon" aria-hidden="true">
                                     <use xlink:href="#icon-email"></use>
@@ -128,7 +130,8 @@
                                         <div class="achieve">
                                             <span><strong>实现功能:</strong> 深入研究Vue3,使用了<span
                                                     class="high-light">setup,onMounted,watchEffect,ref,computed</span>等compositionAPI。
-                                            </span>模块化的源代码简洁明了，易于阅读。</span>
+                                            </span>模块化的源代码简洁明了，易于阅读。
+                                    </span>
                                     </span>我还推出了官方文档，可在线查看代码，并<span class="high-light">支持PC和手机浏览</span></span>。
 
                                 </div>
@@ -149,11 +152,11 @@
                                     <div>手机预览请扫码</div>
                                     <img src="./images/account_vue.png" alt="二维码">
                                 </div>
-                                <a href="" target="_block">React版源码</a>
-                                <a href="" target="_block" id="preview-react">React版预览</a>
+                                <a href="https://github.com/wyjzst/morney-react" target="_block">React版源码</a>
+                                <a href="https://github.com/wyjzst/morney-react-website" target="_block" id="preview-react">React版预览</a>
                                 <div class="QRcode account_react">
                                     <div>手机预览请扫码</div>
-                                    <!-- <img src="./images/account_react.png" alt="二维码"> -->
+                                     <img src="./images/account_react.png" alt="二维码">
                                 </div>
                             </div>
                         </div>
@@ -162,7 +165,7 @@
                             <span><strong>项目介绍:</strong>福星记账是一款极简的记账产品，该项目共实现了两个版本：<span
                                     class="high-light">Vue版</span>和<span
                                     class="high-light">React版</span>，两个版本源代码均使用<span
-                                    class="high-light">TypeScript</span>开发实现，两个不同的框架实现相同的界面。React版目前还在开发中,暂未部署上线。
+                                    class="high-light">TypeScript</span>开发实现，两个不同的框架实现相同的界面。
                             </span>
                         </div>
                         <div class="achieve">
@@ -257,9 +260,14 @@
                 <div class="work">
                     <h2>工作经历</h2>
                     <div>
-                        <span>2019.1-2020.6</span>
-                        <span>杭州知尚服饰有限公司(与前端相关类工作)</span>
+                    <span>2021.3-2021.7</span>
+                    <span>杭州思锐信息技术股份有限公司</span>
                     </div>
+                    <div>
+                        <span>2020.1-2021.2</span>
+                        <span>杭州知尚服饰有限公司</span>
+                    </div>
+
                 </div>
             </section>
             <section>
